--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^1.1.0
+  flutter_svg: ^2.0.7
+  provider: ^6.0.5
+  azlistview: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -74,6 +78,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Eudlid
+      fonts:
+        - asset: assets/fonts/Euclid/500.ttf
+          weight: 500
+        - asset: assets/fonts/Euclid/400.ttf
+          weight: 400
+    - family: Coinbase-Sans
+      fonts:
+        - asset: assets/fonts/Coinbase_Sans/500.ttf
+          weight: 500
+        - asset: assets/fonts/Coinbase_Sans/400.ttf
+          weight: 400
   # fonts:
   #   - family: Schyler
   #     fonts:
