--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   flutter_svg: ^2.0.7
   provider: ^6.0.5
   azlistview: ^2.0.0
+  flutter_share_me: ^1.4.0
+  fluttertoast: ^8.2.2
+  dio: ^5.3.3
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
