--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   fluttertoast: ^8.2.2
   dio: ^5.3.3
   image_picker: ^1.0.4
+  flutter_spinkit: ^5.2.0
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
