--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   image_picker: ^1.0.4
   flutter_spinkit: ^5.2.0
   flutter_secure_storage: ^9.0.0
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
